--- a/core/shared-lib-wrapper/pom.xml
+++ b/core/shared-lib-wrapper/pom.xml
@@ -50,10 +50,6 @@
             <artifactId>colt</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio-svg</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.swinglabs</groupId>
             <artifactId>swing-layout</artifactId>
         </dependency>
@@ -93,6 +89,17 @@
             <groupId>fi.iki.elonen</groupId>
             <artifactId>NanoHTTPD</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreesvg</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
@@ -366,7 +373,9 @@
                             fi.iki.elonen,
                             org.apache.http.*,
                             lombok.*,
-                            org.broad.igv.bbfile.*
+                            org.broad.igv.bbfile.*,
+                            org.jfree.*,
+                            avax.xml.bind.*,
                         </Export-Package>
                     </instructions>
                     <archive>
